// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`postcss plugin > @apply space-y/x case 1`] = `
"@layer properties;
@layer utilities;
.test {
  :where(& > :not(:last-child)) {
    --tw-space-y-reverse: 0;
    margin-block-start: calc(calc(var(--spacing, 0.25rem) * 2) * var(--tw-space-y-reverse));
    margin-block-end: calc(calc(var(--spacing, 0.25rem) * 2) * calc(1 - var(--tw-space-y-reverse)));
  }
  :where(& > :not(:last-child)) {
    --tw-space-x-reverse: 0;
    margin-inline-start: calc(var(--spacing, 0.25rem) * var(--tw-space-x-reverse));
    margin-inline-end: calc(var(--spacing, 0.25rem) * calc(1 - var(--tw-space-x-reverse)));
  }
  color: #123456;
  font-size: 20px;
}
@property --tw-space-y-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-y-reverse: 0;
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`postcss plugin > base tw output 1`] = `
"@layer base {
  *,:after,:before,::backdrop {
    box-sizing: border-box;
    border: 0 solid;
    margin: 0;
    padding: 0;
  }
}
@layer utilities;"
`;

exports[`postcss plugin > base tw output without prefilight 1`] = `
"@layer base {
  *,:after,:before,::backdrop {
    box-sizing: border-box;
    border: 0 solid;
    margin: 0;
    padding: 0;
  }
}
@layer utilities;"
`;

exports[`postcss plugin > base utilities output 1`] = `
":root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.h-10 {
  height: calc(var(--spacing) * 10);
}
.w-10 {
  width: calc(var(--spacing) * 10);
}
.bg-\\[rgba\\(255\\,254\\,253\\,\\.5\\)\\] {
  background-color: rgba(255,254,253,.5);
}"
`;

exports[`postcss plugin > before:content-['+'] 1`] = `
"@layer properties;
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.before\\:content-\\[\\'\\+\\'\\] {
  &::before {
    --tw-content: '+';
    content: var(--tw-content);
  }
}
@property --tw-content {
  syntax: "*";
  initial-value: "";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-content: "";
    }
  }
}"
`;

exports[`postcss plugin > dark mode class > css 1`] = `
"
    view,text,::before,::after {
      --tw-border-style: solid;
    }
.tbody .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: rgb(241, 245, 249);
    border-color: var(--color-slate-100, rgb(241, 245, 249));
  }
.tbody .tr.dark view {
      border-color: rgba(144, 161, 185, 0.1);
    }
.tbody .tr.dark text {
      border-color: rgba(144, 161, 185, 0.1);
    }"
`;

exports[`postcss plugin > dark mode class 1`] = `
"@layer properties;
.tbody {
  .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: var(--color-slate-100, oklch(96.8% 0.007 247.896));
    &:is(.dark *) {
      border-color: color-mix(in srgb, oklch(70.4% 0.04 256.788) 10%, transparent);
      @supports (color: color-mix(in lab, red, red)) {
        border-color: color-mix(in oklab, var(--color-slate-400, oklch(70.4% 0.04 256.788)) 10%, transparent);
      }
    }
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`postcss plugin > dark mode media > css 1`] = `
"
    view,text,::before,::after {
      --tw-border-style: solid;
    }
.tbody .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: rgb(241, 245, 249);
    border-color: var(--color-slate-100, rgb(241, 245, 249));
  }
@media (prefers-color-scheme: dark) {
.tbody .tr {
      border-color: rgba(144, 161, 185, 0.1);
  }
    }"
`;

exports[`postcss plugin > dark mode media 1`] = `
"@layer properties;
.tbody {
  .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: var(--color-slate-100, oklch(96.8% 0.007 247.896));
    @media (prefers-color-scheme: dark) {
      border-color: color-mix(in srgb, oklch(70.4% 0.04 256.788) 10%, transparent);
      @supports (color: color-mix(in lab, red, red)) {
        border-color: color-mix(in oklab, var(--color-slate-400, oklch(70.4% 0.04 256.788)) 10%, transparent);
      }
    }
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`postcss plugin > dark mode selector > css 1`] = `
"
    view,text,::before,::after {
      --tw-border-style: solid;
    }
.tbody .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: rgb(241, 245, 249);
    border-color: var(--color-slate-100, rgb(241, 245, 249));
  }
.tbody .tr.dark,.tbody .tr.dark view,.tbody .tr.dark text {
      border-color: rgba(144, 161, 185, 0.1);
    }"
`;

exports[`postcss plugin > dark mode selector 1`] = `
"@layer properties;
.tbody {
  .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: var(--color-slate-100, oklch(96.8% 0.007 247.896));
    &:where(.dark, .dark *) {
      border-color: color-mix(in srgb, oklch(70.4% 0.04 256.788) 10%, transparent);
      @supports (color: color-mix(in lab, red, red)) {
        border-color: color-mix(in oklab, var(--color-slate-400, oklch(70.4% 0.04 256.788)) 10%, transparent);
      }
    }
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`postcss plugin > dark mode variant 1 > css 1`] = `
"
    view,text,::before,::after {
      --tw-border-style: solid;
    }
.tbody .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: rgb(241, 245, 249);
    border-color: var(--color-slate-100, rgb(241, 245, 249));
  }
.tbody .tr:not(view):not(text) {
      border-color: rgba(144, 161, 185, 0.1);
    }"
`;

exports[`postcss plugin > dark mode variant 1 1`] = `
"@layer properties;
.tbody {
  .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: var(--color-slate-100, oklch(96.8% 0.007 247.896));
    &:not(.light *) {
      border-color: color-mix(in srgb, oklch(70.4% 0.04 256.788) 10%, transparent);
      @supports (color: color-mix(in lab, red, red)) {
        border-color: color-mix(in oklab, var(--color-slate-400, oklch(70.4% 0.04 256.788)) 10%, transparent);
      }
    }
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`postcss plugin > dark mode variant 2 > css 1`] = `
"
    view,text,::before,::after {
      --tw-border-style: solid;
    }
.tbody .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: rgb(241, 245, 249);
    border-color: var(--color-slate-100, rgb(241, 245, 249));
  }
.tbody .tr.dark view {
      border-color: rgba(144, 161, 185, 0.1);
    }
.tbody .tr.dark text {
      border-color: rgba(144, 161, 185, 0.1);
    }
@media (prefers-color-scheme: dark) {
      .tbody .tr:not(view):not(text) {
        border-color: rgba(144, 161, 185, 0.1);
      }
    }"
`;

exports[`postcss plugin > dark mode variant 2 1`] = `
"@layer properties;
.tbody {
  .tr {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 1px;
    border-color: var(--color-slate-100, oklch(96.8% 0.007 247.896));
    &:is(.dark *) {
      border-color: color-mix(in srgb, oklch(70.4% 0.04 256.788) 10%, transparent);
      @supports (color: color-mix(in lab, red, red)) {
        border-color: color-mix(in oklab, var(--color-slate-400, oklch(70.4% 0.04 256.788)) 10%, transparent);
      }
    }
    @media (prefers-color-scheme: dark) {
      &:not(.light *) {
        border-color: color-mix(in srgb, oklch(70.4% 0.04 256.788) 10%, transparent);
        @supports (color: color-mix(in lab, red, red)) {
          border-color: color-mix(in oklab, var(--color-slate-400, oklch(70.4% 0.04 256.788)) 10%, transparent);
        }
      }
    }
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}"
`;

exports[`postcss plugin > double quote after class 1`] = `
"@layer properties;
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.after\\:content-\\[\\"对酒当歌，人生几何\\"\\] {
  &::after {
    --tw-content: "对酒当歌，人生几何";
    content: var(--tw-content);
  }
}
@property --tw-content {
  syntax: "*";
  initial-value: "";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-content: "";
    }
  }
}"
`;

exports[`postcss plugin > handles taro vite tailwindcss v4 app-origin fixture 1`] = `
"/*! tailwindcss v4.2.1 | MIT License | https://tailwindcss.com */
page,
.tw-root,
wx-root-portal-content,
:host {
  --color-cyan-500: rgb(0, 182, 212);
  --color-blue-500: rgb(50, 128, 255);
  --color-purple-300: rgb(216, 180, 255);
  --spacing: 0.25rem;
}
.static {
  position: static;
}
.h-14 {
  height: 3.5rem;
  height: calc(var(--spacing) * 14);
}
.h-_b300px_B {
  height: 300rpx;
}
.bg-_b_h123456_B {
  background-color: #123456;
}
.bg-purple-300 {
  background-color: rgb(216, 180, 255);
  background-color: var(--color-purple-300);
}
.bg-gradient-to-r {
  --tw-gradient-position: to right;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.from-cyan-500 {
  --tw-gradient-from: var(--color-cyan-500);
  --tw-gradient-stops:
    var(--tw-gradient-via-stops, var(--tw-gradient-position)),
    var(--tw-gradient-from) var(--tw-gradient-from-position,),
    var(--tw-gradient-to) var(--tw-gradient-to-position,);
}
.to-blue-500 {
  --tw-gradient-to: var(--color-blue-500);
  --tw-gradient-stops:
    var(--tw-gradient-via-stops, var(--tw-gradient-position)),
    var(--tw-gradient-from) var(--tw-gradient-from-position,),
    var(--tw-gradient-to) var(--tw-gradient-to-position,);
}
.text-_b55rpx_B {
  font-size: 55rpx;
}
.text-_b_hc31d6b_B {
  color: #c31d6b;
}
.text-_b_hfff_B {
  color: #fff;
}
:host,
page,
.tw-root,
wx-root-portal-content {
  --tw-gradient-position: initial;
  --tw-gradient-from: #0000;
  --tw-gradient-to: #0000;
  --tw-gradient-stops: initial;
  --tw-gradient-from-position: 0%;
  --tw-gradient-to-position: 100%;
}
"
`;

exports[`postcss plugin > single quote after class 1`] = `
"@layer properties;
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.after\\:content-\\[\\'对酒当歌，人生几何\\'\\] {
  &::after {
    --tw-content: '对酒当歌，人生几何';
    content: var(--tw-content);
  }
}
@property --tw-content {
  syntax: "*";
  initial-value: "";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-content: "";
    }
  }
}"
`;

exports[`postcss plugin > utf-8 compat after:content-['我是伪元素'] 1`] = `
"@layer properties;
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.after\\:content-\\[\\'我是伪元素\\'\\] {
  &::after {
    --tw-content: '我是伪元素';
    content: var(--tw-content);
  }
}
@property --tw-content {
  syntax: "*";
  initial-value: "";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-content: "";
    }
  }
}"
`;
